--- a/gradle.properties
+++ b/gradle.properties
@@ -17,8 +17,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-VERSION_NAME=0.3.0-SNAPSHOT
-VERSION_CODE=003000
+VERSION_NAME=0.3.1-mirego
+VERSION_CODE=003100
 GROUP=org.florescu.android.rangeseekbar
 
 POM_DESCRIPTION=This library provides a SeekBar similar to the default Android one, but with two thumb controls allowing a range to be selected.
