--- a/rangeseekbar/build.gradle
+++ b/rangeseekbar/build.gradle
@@ -10,6 +10,9 @@ buildscript {
 
 apply plugin: 'com.android.library'
 
+group = 'org.florescu.android.rangeseekbar'
+version = '0.3.0-mirego'
+
 android {
     compileSdkVersion 21
     buildToolsVersion "20.0.0"
@@ -42,5 +45,3 @@ dependencies {
     // Robolectric
     testCompile 'org.robolectric:robolectric:3.0+'
     testCompile "org.mockito:mockito-core:1.9.5"}
-
-apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
