Update to upload to Bintray

--- a/rangeseekbar/build.gradle
+++ b/rangeseekbar/build.gradle
@@ -1,3 +1,7 @@
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.bintray'
+
 buildscript {
     repositories {
         mavenCentral()
@@ -44,4 +48,12 @@ dependencies {
 
     // Robolectric
     testCompile 'org.robolectric:robolectric:3.0+'
-    testCompile "org.mockito:mockito-core:1.9.5"}
+    testCompile "org.mockito:mockito-core:1.9.5"
+}
+
+bintray {
+    pkg {
+        repo = 'webid-grrr'
+    }
+    configurations = ['archives']
+}
