--- a/rangeseekbar-sample/gradle/wrapper/gradle-wrapper.properties
+++ b/rangeseekbar-sample/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Aug 10 16:09:13 EDT 2015
+#Tue Jan 05 16:13:58 EST 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://s3.amazonaws.com/shared.ws.mirego.com/gradle-dists/gradle-2.4-all-mirego-1.zip
+distributionUrl=https\://s3.amazonaws.com/shared.ws.mirego.com/gradle-dists/gradle-2.9-mirego-1-all.zip
