--- a/rangeseekbar-sample/build.gradle
+++ b/rangeseekbar-sample/build.gradle
@@ -6,13 +6,13 @@ repositories {
 }
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 27
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "org.florescu.android.rangeseekbar.sample"
-        minSdkVersion 15
-        targetSdkVersion 21
+        minSdkVersion 18
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -25,7 +25,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.0'
-    compile project(':android-range-seekbar')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation project(':android-range-seekbar')
 }
