--- a/rangeseekbar/build.gradle
+++ b/rangeseekbar/build.gradle
@@ -5,25 +5,26 @@ apply plugin: 'com.jfrog.bintray'
 buildscript {
     repositories {
         mavenCentral()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
 apply plugin: 'com.android.library'
 
 group = 'org.florescu.android.rangeseekbar'
-version = '0.3.4-mirego'
+version = '0.3.6-mirego'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 21
+        minSdkVersion 18
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -42,18 +43,19 @@ dependencies {
         mavenCentral()
     }
 
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.android.support:support-annotations:21.0.3'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:support-annotations:27.0.2'
 
     // Robolectric
-    testCompile 'org.robolectric:robolectric:3.0+'
-    testCompile "org.mockito:mockito-core:1.9.5"
+    //noinspection GradleDynamicVersion
+    testImplementation 'org.robolectric:robolectric:3.0+'
+    testImplementation "org.mockito:mockito-core:1.10.19"
 }
 
 bintray {
     pkg {
-        repo = 'webid-grrr'
+        repo = 'toysrus'
     }
     configurations = ['archives']
 }
